Set up development environment and update configurations.
Added launch settings for local development and changed Dockerfiles to use Debug configuration. Enhanced `docker-compose` by adding Redis and defining a custom network. Renamed `compose.yaml` to `docker-compose.yaml` and updated project references for improved project structure.

--- a/src/BoardBard/BoardBard.Web/BoardBard.Web/BoardBard.Web.csproj
+++ b/src/BoardBard/BoardBard.Web/BoardBard.Web/BoardBard.Web.csproj
@@ -9,6 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\..\BoardBard.Core\BoardBard.Core.csproj" />
         <ProjectReference Include="..\BoardBard.Web.Client\BoardBard.Web.Client.csproj"/>
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.12"/>
     </ItemGroup>
