Add core models for tasks, labels, and boards
Introduce core models including TaskItem, TaskList, TaskBoard, LabelType, TaskLabelLink, and TaskActivity for managing tasks and related data entities. Updated the project configuration to use nullable annotations instead of enable. These additions provide the foundational structure for task management in the application.

--- a/src/BoardBard/BoardBard.Core/BoardBard.Core.csproj
+++ b/src/BoardBard/BoardBard.Core/BoardBard.Core.csproj
@@ -4,11 +4,7 @@
         <TargetFramework>net8.0</TargetFramework>
         <LangVersion>latestmajor</LangVersion>
         <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
+        <Nullable>annotations</Nullable>
     </PropertyGroup>
-
-    <ItemGroup>
-      <Folder Include="Models\" />
-    </ItemGroup>
 
 </Project>
