--- a/src/BoardBard/BoardBard.Core/BoardBard.Core.csproj
+++ b/src/BoardBard/BoardBard.Core/BoardBard.Core.csproj
@@ -7,4 +7,10 @@
         <Nullable>annotations</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.2" />
+      <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.2" />
+      <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.2" />
+    </ItemGroup>
+
 </Project>
