Refactor TaskList to TaskCard; improve EF Core integration
Replaced TaskList with TaskCard and updated related models for a more modular structure. Enhanced Entity Framework Core integration, including SQLite support with migrations. Streamlined repository design and improved configuration file management for better flexibility.

--- a/src/BoardBard/BoardBard.Web/BoardBard.Web/appsettings.Development.json
+++ b/src/BoardBard/BoardBard.Web/BoardBard.Web/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "BOARDBARD_DB_PROVIDER": "sqlite",
+  "BOARDBARD_SQLITE_CONNECTION_STRING": "Data Source=./boardbard.db;Cache=Shared",
+  "BOARDBARD_SQLITE_ENABLE_DETAILED_ERRORS": true,
+  "BOARDBARD_SQLITE_MIGRATIONS_TABLE": "boardbard_migrations"
 }
