--- a/src/BoardBard/BoardBard.Core/BoardBard.Core.csproj
+++ b/src/BoardBard/BoardBard.Core/BoardBard.Core.csproj
@@ -9,8 +9,13 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.2" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.2" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.2" />
       <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.2" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Migrations\Sqlite\" />
     </ItemGroup>
 
 </Project>
