--- a/src/BoardBard/BoardBard.Web/BoardBard.Web.Client/BoardBard.Web.Client.csproj
+++ b/src/BoardBard/BoardBard.Web/BoardBard.Web.Client/BoardBard.Web.Client.csproj
@@ -19,4 +19,8 @@
       </Content>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\BoardBard.Core\BoardBard.Core.csproj" />
+    </ItemGroup>
+
 </Project>
