--- a/src/BoardBard/BoardBard.Web/BoardBard.Web.Client/BoardBard.Web.Client.csproj
+++ b/src/BoardBard/BoardBard.Web/BoardBard.Web.Client/BoardBard.Web.Client.csproj
@@ -3,9 +3,11 @@
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
+        <Nullable>annotations</Nullable>
+        <LangVersion>latestmajor</LangVersion>
         <NoDefaultLaunchSettingsFile>true</NoDefaultLaunchSettingsFile>
         <StaticWebAssetProjectMode>Default</StaticWebAssetProjectMode>
+        <EnableStaticWebAssetsCompression>false</EnableStaticWebAssetsCompression>
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
 
