--- a/src/BoardBard/BoardBard.Web/BoardBard.Web/appsettings.Development.json
+++ b/src/BoardBard/BoardBard.Web/BoardBard.Web/appsettings.Development.json
@@ -1,12 +1,19 @@
 {
+  "BOARDBARD_DB_PROVIDER": "postgres",
+  "BOARDBARD_POSTGRES_DATABASE": "postgres",
+  "BOARDBARD_POSTGRES_PASSWORD": "sample",
+  "BOARDBARD_POSTGRES_PORT": 5432,
+  "BOARDBARD_POSTGRES_USERNAME": "boardbard",
+  "BOARDBARD_SQLITE_CONNECTION_STRING": "Data Source=./boardbard.db;Cache=Shared",
+  "BOARDBARD_SQLITE_ENABLE_DETAILED_ERRORS": true,
+  "BOARDBARD_SQLITE_MIGRATIONS_TABLE": "boardbard_migrations",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "BOARDBARD_DB_PROVIDER": "sqlite",
-  "BOARDBARD_SQLITE_CONNECTION_STRING": "Data Source=./boardbard.db;Cache=Shared",
-  "BOARDBARD_SQLITE_ENABLE_DETAILED_ERRORS": true,
-  "BOARDBARD_SQLITE_MIGRATIONS_TABLE": "boardbard_migrations"
+  "ConnectionStrings": {
+    "Postgres":"Host=localhost;Port=5432;Database=boardbard;Username=boardbard;Password=test;"
+  }
 }
