--- a/src/BoardBard/BoardBard.Core/BoardBard.Core.csproj
+++ b/src/BoardBard/BoardBard.Core/BoardBard.Core.csproj
@@ -14,6 +14,7 @@
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.2" />
       <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.2" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.3" />
+      <PackageReference Include="Radzen.Blazor" Version="6.0.20" />
     </ItemGroup>
 
     <ItemGroup>
