--- a/src/BoardBard/docker-compose.yaml
+++ b/src/BoardBard/docker-compose.yaml
@@ -3,32 +3,38 @@
   boardbard.web:
     image: boardbard.web
     container_name: boardbard-web
+    networks:
+      boardbard-network:
+    ports:
+      - "5000:8080"
     environment:
       BOARDBARD_DB_PROVIDER: "postgres"
       BOARDBARD_POSTGRES_DATABASE: "boardbard"
       BOARDBARD_POSTGRES_PASSWORD: "sample"
       BOARDBARD_POSTGRES_PORT: 5432
       BOARDBARD_POSTGRES_USERNAME: "boardbard"
-    ports:
-      - "5000:8080"
+      BOARDBARD_POSTGRES_HOST: "postgres"
+      BOARDBARD_POSTGRES_MIGRATIONS_TABLE: "entity_migrations"
+      BOARDBARD_POSTGRES_SCHEMA: "mig"
     build:
       context: .
       dockerfile: BoardBard.Web/BoardBard.Web/Dockerfile
-    networks:
-      boardbard-network:
-        ipv4_address: 10.1.0.2
     depends_on:
       - postgres
   
   postgres:
     image: postgres:latest
     container_name: boardbard-db
+    networks:
+      boardbard-network:
+    ports:
+      - "5432:5432"
     environment:
       POSTGRES_DB: "boardbard"
       POSTGRES_USER: "boardbard"
       POSTGRES_PASSWORD: "sample"
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U postgres -d boardbard -h localhost -p 5432 -w -q -W 'sample'" ]
+      test: [ "CMD-SHELL", "pg_isready -U postgres -d boardbard" ]
       interval: 10s
       timeout: 5s
       retries: 3
