added missing production appsettings; fixed race condition with docker compose containers

--- a/src/BoardBard/BoardBard.Web/BoardBard.Web/BoardBard.Web.csproj
+++ b/src/BoardBard/BoardBard.Web/BoardBard.Web/BoardBard.Web.csproj
@@ -24,6 +24,15 @@
     </ItemGroup>
 
     <ItemGroup>
+        <Content Update="appsettings.Development.json">
+            <DependentUpon>appsettings.json</DependentUpon>
+        </Content>
+        <Content Update="appsettings.Production.json">
+            <DependentUpon>appsettings.json</DependentUpon>
+        </Content>
+    </ItemGroup>
+
+    <ItemGroup>
       <Content Include="..\..\.dockerignore">
         <Link>.dockerignore</Link>
       </Content>
